# adv-it-defenses

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
configs/: example_config.yaml  resnet50_autoattack_bm3d.yaml  smoe-tests.yaml  standard-resnet-eps05.yaml  test.yaml
configs/experiments/: eps01.yaml  eps02.yaml  eps03.yaml  eps04.yaml  eps05.yaml  eps06.yaml  eps07.yaml  standard-resnet-eps01.yaml  standard-resnet-eps02.yaml  standard-resnet-eps03.yaml  standard-resnet-eps04yaml  standard-resnet-eps05.yaml  standard-resnet-eps06.yaml  standard-resnet-eps07.yaml
configs/queues/: example_queue.yaml  standard-resnet-experiments.yaml
lib/advdef/: __init__.py  cli.py  plugins.py
lib/advdef/attacks/: __init__.py  autoattack.py  torchattacks.py
lib/advdef/config/: __init__.py  attack.py  base.py  dataset.py  defense.py  evaluation.py  experiment.py  inference.py  model.py
lib/advdef/core/: __init__.py  context.py  pipeline.py  registry.py  samples.py
lib/advdef/datasets/: __init__.py  imagenet_autoattack.py  imagenet_labels.py
lib/advdef/defenses/: __init__.py  _common.py  bit_depth.py  bm3d.py  crop_resize.py  flip.py  grayscale.py  jpeg.py  low_pass.py  r_smoe.py  smoe_ae.py  tvm.py
lib/advdef/evaluation/: __init__.py  imagenet.py
lib/advdef/inference/: __init__.py  timm_backend.py
lib/advdef/utils/: __init__.py  env.py  fs.py  io.py  metrics.py  naming.py  progress.py  time.py
tests/: test_defenses.py  test_naming_utils.py  test_pipeline_state.py
tools/: convert_smoe_ae_tf_to_torch.py  verify_smoe_tf_vs_torch.py
(+5 files in other folders)
